# gcr_chat

./: README.md  pyproject.toml
examples/: call.py  main.py  server.py
gcr_chat/: __init__.py  models.py
gcr_chat/chatbot/: __init__.py  client.py  command.py  exceptions.py
tests/: test_client.py  test_command.py  test_models.py
